# ai-text-detector

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.claude/skills/katee-manifest/: SKILL.md  reference.md
apps/web/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AnalyzerClient.tsx  Disclaimer.tsx  ResultCard.tsx  SegmentHeatmap.tsx  TextInput.tsx  UploadPanel.tsx
apps/web/lib/: api.ts  types.ts
docs/: dataset-strategy.md  evaluation-plan.md  guardrails.md  implementation-roadmap.md  katee-manifest-handoff.md  model-card.md  model-technical-reference.md  privacy-policy.md  product-spec.md  sample-outputs.md  system-architecture.md  training-on-kubernetes.md  ui-design.md
infra/k8s/app/: katee-application.yaml
infra/k8s/training/: README.md  all-in-one.gpu.example.yaml  configmap.example.yaml  job.gpu.example.yaml  katee-application.artifact-inspector.example.yaml  katee-application.gpu.a100.from-existing-data.example.yaml  katee-application.gpu.example.yaml  katee.yaml  (+4 more)
libs/text_features/: pyproject.toml
libs/text_features/text_features/: __init__.py  features.py  text.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/ai_text_origin_risk_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/app/: main.py
services/api/app/api/routes/: admin.py  analyze.py  results.py
services/api/app/core/: config.py
services/api/app/schemas/: analysis.py
services/api/app/services/: evaluation_data.py  extraction.py  features.py  inference.py  language.py  model_bundle.py  normalization.py  orchestrator.py  recommendation.py  store.py
services/api/tests/: test_analyze_text.py  test_file_uploads.py
services/ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ml/configs/: train.example.yaml  train.multisource.a100.example.yaml  train.multisource.example.yaml
services/ml/tests/: conftest.py  test_oof_grouping.py  test_segment_labels.py
services/ml/trainer/: artifacts.py  classifier.py  cli.py  config.py  datasets.py  evaluate.py  features.py  meta.py  public_datasets.py  stylometry.py  text_utils.py
(+3 files in other folders)
