[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-features"
version = "0.1.0"
description = "Shared text feature extraction used by both training and API services"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["text_features*"]
