[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-text-origin-risk-trainer"
version = "0.1.0"
description = "Training pipeline for the AI Text Origin Risk Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.1,<2.0",
  "datasets>=3.1,<4.0",
  "evaluate>=0.4,<0.5",
  "joblib>=1.4,<2.0",
  "lightgbm>=4.5,<5.0",
  "numpy>=2.1,<3.0",
  "pandas>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
  "safetensors>=0.4,<0.6",
  "scikit-learn>=1.5,<2.0",
  "sentencepiece>=0.2,<0.3",
  "torch>=2.5,<2.7",
  "transformers>=4.47,<5.0",
  "tqdm>=4.67,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.setuptools.packages.find]
include = ["trainer*"]
